--- a/client/src/layout/nav/nav.html
+++ b/client/src/layout/nav/nav.html
@@ -42,7 +42,7 @@
                     </svg>
                     <span>{{selectedTheme()}}</span>
                 </button>
-                <ul tabindex="1" class="dropdown-content menu bg-base-100 rounded-box z-1 w-52 p-2 shadow-sm">
+                <ul tabindex="1" class="dropdown-content menu bg-base-100 rounded-box z-50 w-52 p-2 shadow-sm">
                     @for (theme of themes; track $index) {
                         <li (click)="handleSelectTheme(theme)">
                             <a>{{theme}}</a>
@@ -61,7 +61,7 @@
           tabindex="-1"
           class="dropdown-content dropdown-end menu bg-base-100 rounded-box z-1 w-52 p-2 shadow-sm"
         >
-          <li><a>Edit profile</a></li>
+          <li><a routerLink="/members/{{user.id}}">Edit profile</a></li>
           <li><a (click) = "logout()">Logout</a></li>
         </ul>
       </div>
