--- a/client/src/layout/nav/nav.html
+++ b/client/src/layout/nav/nav.html
@@ -30,6 +30,12 @@
       }
       <a routerLink="/errors" routerLinkActive="text-accent">Errors</a>
     </nav>
+
+    @if(busyService.busyRequestCount() > 0)
+    {
+      <span class="loading loading-dots text-accent"></span>
+    }
+
     <div class="flex align-middle ml-auto gap-3">
       
       <div class="dropdown mr-5 dropdown-end">
